// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matching Events 1`] = `
ZfsPool {
  "DATASETS": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
  "NAME": "testPool1",
  "PATH": "testPool1",
  "PROPERTIES": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
  "STATE_STR": "ACTIVE",
  "UID": "0x2D28F440E514007F",
}
`;

exports[`Matching Events 2`] = `
ZfsPool {
  "DATASETS": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
  "NAME": "testPool1",
  "PATH": "testPool1",
  "PROPERTIES": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
  "STATE_STR": "DESTROYED",
  "UID": "0x2D28F440E514007F",
}
`;

exports[`Matching Events 3`] = `
ZfsPool {
  "DATASETS": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
  "NAME": "testPool1",
  "PATH": "testPool1",
  "PROPERTIES": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
  "STATE_STR": "EXPORTED",
  "UID": "0x2D28F440E514007F",
}
`;

exports[`Matching Events 4`] = `
ZfsPool {
  "DATASETS": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
  "NAME": "testPool1",
  "PATH": "testPool1",
  "PROPERTIES": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
  "STATE_STR": "ACTIVE",
  "UID": "0x2D28F440E514007F",
}
`;

exports[`Matching Events 5`] = `
ZfsDataset {
  "DATASET_NAME": "testPool1/home",
  "DATASET_UID": "11",
  "POOL_UID": "0x2D28F440E514007F",
  "PROPERTIES": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
}
`;

exports[`Matching Events 6`] = `
ZfsDataset {
  "DATASET_NAME": "testPool1/home",
  "DATASET_UID": "11",
  "POOL_UID": "0x2D28F440E514007F",
  "PROPERTIES": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
}
`;
